--- a/style.css
+++ b/style.css
@@ -269,11 +269,7 @@ button i{
   list-style: none;
 }
 
-.first-list {
-  border: 2px solid white;
-  
-  
-}
+
 .first-list ul{
   margin-top: 1.5rem;
 }
@@ -281,18 +277,14 @@ button i{
   text-align: left;
 }
 .first-list li i{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-right: 1rem;
   background: #46B322;
   padding: 0.5rem;
   border-radius: 50%;
 }
 
-.second-list {
-  border: 2px solid white;
-  
-  
-}
+
 .second-list ul{
   margin-top: 1.5rem;
 }
@@ -300,18 +292,14 @@ button i{
   text-align: left;
 }
 .second-list li i{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-right: 1rem;
   background: #46B322;
   padding: 0.5rem;
   border-radius: 50%;
 }
 
-.third-list {
-  border: 2px solid white;
-  
-  
-}
+
 .third-list ul{
   margin-top: 1.5rem;
 }
@@ -319,7 +307,7 @@ button i{
   text-align: left;
 }
 .third-list li i{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-right: 1rem;
   background: #46B322;
   padding: 0.5rem;
