--- a/style.css
+++ b/style.css
@@ -61,14 +61,16 @@ header img{
   font-size: 20px;
 
   }
+ 
 
   .youtube{
     width: 300px;
     height: 300px;
   }
   header img{
-    width: 17rem;
-    margin-left: 2.7rem;
+    width: 100%;
+    height: 300px;
+    /* margin-left: 2.7rem; */
   }
 
   header h1{
@@ -162,6 +164,15 @@ article:hover{
   font-size: 20px;
   font-weight: normal;
 }
+@media screen and (max-width: 400px){
+  .container{
+    
+  }
+  .section-2 h2{
+    text-align: left;
+  }
+}
+
 
 .btn-reg{
   padding: 15px;
@@ -241,6 +252,9 @@ button i{
 .container{
   margin: 2rem 5rem;
 }
+.section-3{
+  margin-top: 3rem;
+}
 .section-3 p{
     text-align: center;
     margin-top: 1rem;
@@ -264,6 +278,7 @@ button i{
   text-align: center;
   color: white;
   padding: 2rem 0;
+  margin-top: 3rem;
 }
 .section-4 ul{
   list-style: none;
