--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ button i{
   margin-top: 1.5rem;
 }
 .first-list li{
-  text-align: left;
+  text-align: center;
 }
 .first-list li i{
   /* border: 1px solid black; */
